fix: wrong color in jitera tool

--- a/src/styles/less/preview.less
+++ b/src/styles/less/preview.less
@@ -1,3 +1,7 @@
+@root-entry-name: default;
+
+@import '~antd/lib/style/components.less';
+
 @ant-prefix: jitera;
 @grid-columns: 24;
 @col-prefix-cls: ~'@{ant-prefix}-col';
